# awfuldl

./: .gitignore  Cargo.toml  README.md  config.toml
src/: download.rs  main.rs
